[package]
name = "neo4j_testcontainers"
version = "0.2.0"
authors = ["Paul Horn <paul.horn@neo4j.com>", "Neo4j Labs <devrel@neo4j.com>"]
edition = "2021"
description = "Neo4j module for testcontainers-rs"
license = "MIT"
repository = "https://github.com/knutwalker/neo4j-testcontainers-rs"
documentation = "https://docs.rs/neo4j_testcontainers"
readme = "README.md"
keywords = ["neo4j", "testcontainers", "docker"]
categories = ["development-tools::testing"]
rust-version = "1.63.0"

[dependencies]
lenient_semver = { version = "0.4.2", default-features = false }
testcontainers = { version = "0.14.0" }

[dev-dependencies]
neo4rs = "0.6.2"
tokio = { version = "1.28.2", features = ["test-util", "macros"] }
