[package]
name = "neo4j_testcontainers"
version = "0.3.0"
authors = ["Paul Horn <paul.horn@neo4j.com>", "Neo4j Labs <devrel@neo4j.com>"]
edition = "2021"
description = "Neo4j module for testcontainers-rs"
license = "MIT"
repository = "https://github.com/knutwalker/neo4j-testcontainers-rs"
documentation = "https://docs.rs/neo4j_testcontainers"
readme = "README.md"
keywords = ["neo4j", "testcontainers", "docker"]
categories = ["development-tools::testing"]
rust-version = "1.70.0"

[dependencies]
testcontainers-modules = { version = "0.4.0", features = ["neo4j"] }

[dev-dependencies]
neo4rs = "0.7.0"
testcontainers = { version = "0.16.7", features = ["blocking"] }
tokio = { version = "1.5.0", features = ["test-util", "macros"] }
